# Rugus

./: .gitattributes  .gitignore  AGENT_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  port_request.yml
.github/workflows/: ci.yml
crates/rugus-arch-cortex-a/: Cargo.toml
crates/rugus-arch-cortex-a/.cargo/: config.toml
crates/rugus-arch-cortex-a/src/: lib.rs  time.rs  vectors.rs
crates/rugus-arch-cortex-m/: Cargo.toml
crates/rugus-arch-cortex-m/src/: exceptions.rs  fault.rs  lib.rs  mpu.rs  svc.rs  switch.rs  time.rs
crates/rugus-cli/: Cargo.toml
crates/rugus-cli/src/: ansi.rs  auth.rs  ble.rs  ble_stub.rs  commands.rs  detect.rs  device.rs  lib.rs  main.rs  net.rs  serial.rs  tui.rs
crates/rugus-core/: Cargo.toml
crates/rugus-core/src/: arch.rs  channel.rs  domain.rs  fault.rs  heap.rs  lib.rs  sched.rs  syscall.rs  telemetry.rs
crates/rugus-core/src/syscall/: lite.rs
crates/rugus-crypto/: Cargo.toml
crates/rugus-crypto/src/: lib.rs  mac.rs  software.rs
crates/rugus-fs/: Cargo.toml
crates/rugus-fs/src/: crc.rs  faultlog.rs  lib.rs  mock.rs
crates/rugus-hal/: Cargo.toml
crates/rugus-hal-stm32f1/: Cargo.toml
crates/rugus-hal-stm32f1/src/: gpio.rs  gpio_raw.rs  hm20.rs  i2c.rs  lib.rs  postmortem.rs  rcc.rs  spi_sd.rs  uart.rs  uart2.rs  wdt.rs
crates/rugus-hal-stm32f4/: Cargo.toml
crates/rugus-hal-stm32f4/src/: adc.rs  exti.rs  flash.rs  gpio.rs  iwdg.rs  lib.rs  rcc.rs  reset.rs  timer.rs  usart.rs
crates/rugus-hal-stm32f7/: Cargo.toml
crates/rugus-hal-stm32f7/src/: adc.rs  cache.rs  exti.rs  fmc.rs  gpio.rs  iwdg.rs  lib.rs  power.rs  qspi.rs  rcc.rs  reset.rs  timer.rs  usart.rs
crates/rugus-hal-stm32f7/src/eth/: mac.rs  miim.rs  mod.rs  port.rs  setup.rs
crates/rugus-hal-stm32f7/src/eth/dma/: desc.rs  mod.rs  packet_id.rs  ring.rs  smoltcp_phy.rs
crates/rugus-hal-stm32f7/src/eth/dma/rx/: descriptor.rs  mod.rs
crates/rugus-hal-stm32f7/src/eth/dma/tx/: descriptor.rs  mod.rs
crates/rugus-hal/src/: block.rs  crypto.rs  digital.rs  eth.rs  lib.rs  serial.rs
crates/rugus-host-tests/: Cargo.toml
crates/rugus-host-tests/src/: lib.rs
crates/rugus-host-tests/tests/: rugus_faultlog.rs  rugus_fs.rs  syscall_fs.rs
crates/rugus-kernel/: Cargo.toml
crates/rugus-kernel/src/: console.rs  lib.rs  status.rs
crates/rugus-net/: Cargo.toml
crates/rugus-net/src/: lib.rs  tcp.rs
crates/rugus-personality-full/: Cargo.toml
crates/rugus-personality-full/src/: lib.rs
crates/rugus-proto/: Cargo.toml
crates/rugus-proto/src/: auth.rs  command.rs  frame.rs  identify.rs  lib.rs  render.rs
crates/rugus-rfn/: Cargo.toml
crates/rugus-rfn/src/: lib.rs
crates/rugus-runtime/: Cargo.toml
crates/rugus-runtime/src/: lib.rs
crates/rugus-tls/: Cargo.toml
crates/rugus-tls/src/: lib.rs
crates/rugus-ui/: Cargo.toml
crates/rugus-ui/examples/: preview.rs
crates/rugus-ui/src/: lib.rs
crates/rush/: Cargo.toml
crates/rush/src/: banner.rs  commands.rs  identify.rs  lib.rs  paint.rs  session.rs
docs/: AARCH64-USERLAND-DESIGN.md  ARCHITECTURE.md  G4-CLOSE-REPORT.md  G4-ETH-DEBUG.md  G4-MORNING-REPORT.md  HAL_TRAITS.md  INVARIANTS.md  PERFORMANCE.md  PORTING.md  ROADMAP.md  RUGUS-CLI-HOST.md  RUGUS-ECOSYSTEM.md  RUGUS-KERNEL-VISION.md  RUGUS-LITE-APPLIANCE.md  RUGUS-LITE-ML.md  RUSH-CONSOLES.md  SECURITY_MODEL.md  SYSCALL_ABI.md
docs/agent-memory/: README.md  preferences.md  project.md
docs/boards/: README.md  stm32f103c8-bluepill.md  stm32f407g-disco.md  stm32f769-disco.md
examples/app-sandbox-stm32f407g-disco/: Cargo.toml
examples/app-sandbox-stm32f407g-disco/src/: auth.rs  main.rs  psk.rs
examples/app-sandbox-stm32f769-disco/: Cargo.toml  memory.x
examples/app-sandbox-stm32f769-disco/src/: auth.rs  main.rs
examples/appliance-stm32f103c8-bluepill/: Cargo.toml  build.rs  memory.x
examples/appliance-stm32f103c8-bluepill/.cargo/: config.toml
examples/appliance-stm32f103c8-bluepill/src/: auth.rs  heartbeat.rs  main.rs  psk.rs  services.rs
examples/blink-stm32f103c8-bluepill/: Cargo.toml  build.rs  memory.x
examples/blink-stm32f103c8-bluepill/src/: main.rs
examples/blink-stm32f407g-disco/: Cargo.toml  memory.x
examples/blink-stm32f407g-disco/.cargo/: config.toml
examples/blink-stm32f407g-disco/src/: main.rs
examples/blink-stm32f407vet6-blackpill/: Cargo.toml  memory.x
examples/blink-stm32f407vet6-blackpill/src/: main.rs
examples/blink-stm32f769-disco/: Cargo.toml  README.md  memory.x
examples/blink-stm32f769-disco/src/: main.rs
examples/console-power-stm32f407g-disco/: Cargo.toml  memory.x
examples/console-power-stm32f407g-disco/.cargo/: config.toml
examples/console-power-stm32f407g-disco/src/: board.rs  main.rs
examples/console-stm32f407vet6-blackpill/: Cargo.toml  memory.x
examples/console-stm32f407vet6-blackpill/.cargo/: config.toml
examples/console-stm32f407vet6-blackpill/src/: main.rs
examples/dual-blink-stm32f103c8-bluepill/: Cargo.toml  memory.x
examples/dual-blink-stm32f407g-disco/: Cargo.toml
examples/dual-blink-stm32f769-disco/: Cargo.toml  build.rs  memory.x
examples/eco/: hm20-ble.eco
examples/eth-link-stm32f769-disco/: Cargo.toml  README.md  build.rs  memory.x
examples/fs-probe-stm32f769-disco/: Cargo.toml
examples/fs-userland-stm32f769-disco/: Cargo.toml
examples/hello-rpi3/: Cargo.toml
examples/https-get-stm32f769-disco/: Cargo.toml  README.md  memory.x
tools/: flash-stm32f769-disco.ps1  provision-hm20.sh  verify-app-sandbox-stm32f407g-disco.sh  verify-app-sandbox-stm32f769-disco.sh  verify-appliance-stm32f103c8-bluepill.sh  verify-blink-stm32f103c8-bluepill.sh  verify-blink-stm32f407g-disco.sh  verify-blink-stm32f769-disco.sh  verify-dual-blink-stm32f103c8-bluepill.sh  verify-dual-blink-stm32f407g-disco.sh  verify-dual-blink-stm32f769-disco.sh  verify-eth-link-stm32f769-disco.sh  verify-https-get-stm32f769-disco.sh
(+54 files in other folders)
