[workspace]
resolver = "2"
members = [
  "crates/rugus-core",
  "crates/rugus-arch-cortex-m",
  "crates/rugus-hal",
  "crates/rugus-hal-stm32f7",
  "crates/rugus-runtime",
  "examples/blink-stm32f769-disco",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"
authors      = ["Luis Guillermo Hernandez <luiguihez93@gmail.com>"]
repository   = "https://github.com/guillo93/Rugus"

[workspace.dependencies]
# ARM Cortex-M base (necesario para los crates Cortex-M; otros archs lo ignoran)
cortex-m          = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt       = "0.7.5"

# Vendor PAC (svd2rust) — sólo para los crates rugus-hal-stm32f7 y consumidores.
# Feature `stm32f7x9` cubre las variantes F769/F779 (mismo die).
stm32f7           = { version = "0.15.1", features = ["stm32f7x9", "rt"] }

# Logging por SWD/RTT (target-side); el host usa `probe-rs`
defmt             = "1.1.0"
defmt-rtt         = "0.4.1"
panic-probe       = { version = "0.3.2", features = ["print-defmt"] }

# Primitivas no_std
critical-section  = "1.2"
heapless          = { version = "0.8", default-features = false }
bitflags          = { version = "2.6", default-features = false }

# Crates internos del workspace
rugus-core          = { path = "crates/rugus-core",          version = "0.1.0" }
rugus-arch-cortex-m = { path = "crates/rugus-arch-cortex-m", version = "0.1.0" }
rugus-hal           = { path = "crates/rugus-hal",           version = "0.1.0" }
rugus-hal-stm32f7   = { path = "crates/rugus-hal-stm32f7",   version = "0.1.0" }
rugus-runtime       = { path = "crates/rugus-runtime",       version = "0.1.0" }

[profile.dev]
opt-level        = 1
debug            = 2
lto              = false
codegen-units    = 16
overflow-checks  = true
incremental      = true

[profile.release]
opt-level        = 3
debug            = 2
lto              = "fat"
codegen-units    = 1
overflow-checks  = false

[profile.release-dev]
inherits         = "release"
lto              = "thin"
codegen-units    = 4
