[workspace]
resolver = "2"
members = [
  "crates/rush",
  "crates/rugus-rfn",
  "crates/rugus-core",
  "crates/rugus-arch-cortex-m",
  "crates/rugus-kernel",
  "crates/rugus-hal",
  "crates/rugus-hal-stm32f1",
  "crates/rugus-hal-stm32f4",
  "crates/rugus-hal-stm32f7",
  "crates/rugus-net",
  "crates/rugus-crypto",
  "crates/rugus-tls",
  "crates/rugus-runtime",
  "examples/https-get-stm32f769-disco",
  "examples/blink-stm32f103c8-bluepill",
  "examples/dual-blink-stm32f103c8-bluepill",
  "examples/appliance-stm32f103c8-bluepill",
  "examples/blink-stm32f407g-disco",
  "examples/blink-stm32f769-disco",
  "examples/dual-blink-stm32f407g-disco",
  "examples/dual-blink-stm32f769-disco",
  "examples/app-sandbox-stm32f407g-disco",
  "examples/app-sandbox-stm32f769-disco",
  "examples/eth-link-stm32f769-disco",
]

# Crates host-side (std, triple del PC). Se EXCLUYEN del workspace embebido para
# que `cargo build --workspace --target thumbv7m-*` (CI) NO los compile. Son
# crates independientes; `rugus-cli` depende de `rugus-proto` por `path`. Se
# construyen/testean en el job `host` del CI sobre el triple nativo.
exclude = [
  "crates/rugus-proto",
  "crates/rugus-cli",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"
authors      = ["Luis Guillermo Hernandez <luiguihez93@gmail.com>"]
repository   = "https://github.com/guillo93/Rugus"

[workspace.dependencies]
# ARM Cortex-M base (necesario para los crates Cortex-M; otros archs lo ignoran)
cortex-m          = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt       = "0.7.5"

# Vendor PAC (svd2rust) — sólo para los crates rugus-hal-stm32f7 y consumidores.
# Feature `stm32f7x9` cubre las variantes F769/F779 (mismo die).
stm32f1           = { version = "0.15.1", features = ["stm32f103", "rt"] }
stm32f4           = { version = "0.15.1", features = ["stm32f407", "rt"] }
stm32f7           = { version = "0.15.1", features = ["stm32f7x9", "rt"] }

# Logging por SWD/RTT (target-side); el host usa `probe-rs`
defmt             = "1.1.0"
defmt-rtt         = "1.2.0"
panic-probe       = { version = "1.0.0", features = ["print-defmt"] }

# Primitivas no_std
critical-section  = "1.2"
heapless          = { version = "0.9", default-features = false }
bitflags          = { version = "2.6", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
smoltcp           = { version = "0.12", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-dhcpv4", "socket-tcp", "defmt"] }
embedded-tls      = { version = "0.18", default-features = false }
embedded-io       = { version = "0.7", default-features = false }
rand_core         = { version = "0.6", default-features = false }
sha2              = { version = "0.11", default-features = false }
ieee802_3_miim    = "0.8"
volatile-register = "0.2"
aligned           = "0.4"

# Crates internos del workspace
rugus-core          = { path = "crates/rugus-core",          version = "0.1.0" }
rugus-arch-cortex-m = { path = "crates/rugus-arch-cortex-m", version = "0.1.0" }
rugus-kernel        = { path = "crates/rugus-kernel",        version = "0.1.0" }
rugus-hal           = { path = "crates/rugus-hal",           version = "0.1.0" }
rugus-hal-stm32f1   = { path = "crates/rugus-hal-stm32f1",   version = "0.1.0" }
rugus-hal-stm32f4   = { path = "crates/rugus-hal-stm32f4",   version = "0.1.0" }
rugus-hal-stm32f7   = { path = "crates/rugus-hal-stm32f7",   version = "0.1.0" }
rugus-net           = { path = "crates/rugus-net",           version = "0.1.0" }
rugus-crypto        = { path = "crates/rugus-crypto",        version = "0.1.0" }
rugus-tls           = { path = "crates/rugus-tls",           version = "0.1.0" }
rugus-runtime       = { path = "crates/rugus-runtime",       version = "0.1.0" }
rush                = { path = "crates/rush",                version = "0.1.0" }
rugus-rfn           = { path = "crates/rugus-rfn",           version = "0.1.0" }

[profile.dev]
opt-level        = 1
debug            = 2
lto              = false
codegen-units    = 16
overflow-checks  = true
incremental      = true

[profile.release]
opt-level        = 3
debug            = 2
lto              = "fat"
codegen-units    = 1
overflow-checks  = false

[profile.release-dev]
inherits         = "release"
lto              = "thin"
codegen-units    = 4

[profile.release.package.appliance-stm32f103c8-bluepill]
opt-level        = "z"
debug            = false
