[package]
name        = "rugus-arch-cortex-m"
description = "Rugus Arch backend for ARM Cortex-M (v7-M / v7E-M / v8-M)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
cortex-m         = { workspace = true }
cortex-m-rt      = { workspace = true }
defmt            = { workspace = true, optional = true }
rugus-core       = { workspace = true }

[features]
default = ["systick"]
defmt = ["dep:defmt", "rugus-core/log"]
# Provee el handler `#[exception] fn SysTick` que alimenta el reloj monotónico
# de `time`. Default-on: los ejemplos que usan `time::init` lo necesitan. Un
# binario que defina su propio SysTick (p. ej. un stack de red con su propia
# base de tiempo) debe poner `default-features = false` en la dependencia de
# este crate para evitar el doble símbolo en el link.
systick = []
# Tick dinámico (F5.A.1): en idle, reprograma SysTick al próximo plazo del
# scheduler en vez de interrumpir cada milisegundo, reduciendo despertares
# ociosos. Requiere `systick` (la contabilidad vive en su ISR). OFF por defecto:
# los ejemplos conservan el tick fijo de 1 kHz salvo que lo activen.
tickless = ["systick"]
