[package]
name        = "rugus-cli"
description = "Rugus CLI presentation layer — ANSI banners, command lexicon, no_std."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
rugus-core = { workspace = true }
heapless   = { workspace = true }
