[package]
name        = "rugus-cli"
description = "Rugus desktop client — auto-detect Rugus devices over serial/BLE and drive them from a TUI."
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
license     = "MIT OR Apache-2.0"
authors     = ["Luis Guillermo Hernandez <luiguihez93@gmail.com>"]
repository  = "https://github.com/guillo93/Rugus"

[[bin]]
name = "rugus-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
btleplug = "0.12.0"
crossterm = "0.29.0"
futures = "0.3.32"
ratatui = "0.29.0"
rugus-proto = { path = "../rugus-proto" }
serialport = "4.9.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = "1.20.0"
