[package]
name        = "rugus-core"
description = "Rugus kernel core: arch-agnostic scheduler, IPC, syscall ABI, MPU/MMU abstraction trait."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
defmt                   = { workspace = true, optional = true }
linked_list_allocator   = { workspace = true, optional = true }

[features]
default = []
# Activa logs `defmt` desde el core. Costo en footprint; útil en bring-up.
log = ["dep:defmt"]
# Provee el heap global (`#[global_allocator]`) sobre `linked_list_allocator`.
# Fuera del TCB mínimo: las personalidades sin heap (p. ej. lite/F103) NO lo
# activan. Solo las placas con región de heap (full/F4/F7) lo habilitan.
alloc = ["dep:linked_list_allocator"]
