[package]
name        = "rugus-hal-stm32f7"
description = "Rugus HAL implementation for STMicroelectronics STM32F7 family (F767/F769/F779)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
cortex-m         = { workspace = true }
stm32f7          = { workspace = true }
critical-section = { workspace = true }
rugus-hal        = { workspace = true }

[features]
default = ["stm32f769"]
# Selección de variante de la familia. Activa una sola.
stm32f767 = []
stm32f769 = []
stm32f779 = []
