[package]
name        = "rugus-hal-stm32f7"
description = "Rugus HAL implementation for STMicroelectronics STM32F7 family (F767/F769/F779)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
cortex-m         = { workspace = true }
stm32f7          = { workspace = true }
rugus-hal        = { workspace = true }
rugus-net        = { workspace = true }
smoltcp          = { workspace = true }
ieee802_3_miim   = { workspace = true }
volatile-register = { workspace = true }
aligned          = { workspace = true }
defmt            = { workspace = true }

# El PAC `stm32f7` agrupa por die en lugar de por part-number.
# `stm32f7x9` cubre F769/F779 (mismo silicio, distinto packaging).
# Features per-part en este crate son alias informativos.
[features]
default = ["stm32f769"]
stm32f769 = []
stm32f779 = []
