[package]
name        = "rugus-kernel"
description = "Rugus cohesive kernel layer for ARM Cortex-M (F4/F7): scheduler ownership, syscall + fault wiring, boot/run API."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true, optional = true }
rugus-core          = { workspace = true }
rugus-arch-cortex-m = { workspace = true }

[features]
default = []
defmt = ["dep:defmt", "rugus-core/log", "rugus-arch-cortex-m/defmt"]
# Expone estadísticas del heap del sistema en la consola (`mem`). Reenvía al
# heap global de `rugus-core`; sin esta feature `heap_*` devuelven 0.
alloc = ["rugus-core/alloc"]
