[package]
name        = "rugus-net"
description = "Rugus network stack wrapper around smoltcp."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
smoltcp      = { workspace = true }
embedded-io  = { workspace = true }
defmt        = { workspace = true }
