[package]
name        = "rugus-tls"
description = "Rugus TLS 1.3 client wrapper around embedded-tls."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[dependencies]
embedded-tls = { workspace = true }
embedded-io  = { workspace = true }
rand_core    = { workspace = true }
rugus-crypto = { workspace = true }
defmt        = { workspace = true, optional = true }

[features]
default = []
defmt   = ["dep:defmt", "embedded-tls/defmt"]
