[package]
name        = "rush"
description = "Rugus on-device shell — ANSI banners, command lexicon, IDENTIFY, no_std."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
test = false
bench = false

[features]
# Consola universal de Rugus (multipersonalidad): set base + comandos gateables.
# La personalidad lite (F103) habilita solo lo que cabe; el resto de placas/PC
# pueden activar más. `power` (comando `letargo`: energía/ocio) es pequeño y va
# por defecto, también en el recorte lite.
default = ["power"]
power = []
# `auth`: gate de autenticación de canal (challenge-response HMAC). Con esta
# feature, la consola exige sesión autenticada antes de cualquier verbo salvo
# IDENTIFY y el propio handshake (knock/prove/lock/enroll). La PSK y el cómputo
# HMAC viven en la PERSONALIDAD (hook `verify_proof`); rush nunca ve el secreto.
auth = []

[dependencies]
rugus-core = { workspace = true }
rugus-ui   = { workspace = true }
heapless   = { workspace = true }
