[package]
name        = "app-sandbox-stm32f407g-disco"
description = "Rugus G3: MPU sandbox on STM32F407G-DISC1 (heap in internal SRAM)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish     = false

[[bin]]
name = "app-sandbox-stm32f407g-disco"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true }
rugus-runtime       = { workspace = true }
rugus-hal           = { workspace = true }
rugus-hal-stm32f4   = { workspace = true, features = ["stm32f407"] }
rugus-core          = { workspace = true, features = ["log"] }
rugus-arch-cortex-m = { workspace = true, features = ["defmt"] }
