[package]
name        = "app-sandbox-stm32f769-disco"
description = "Rugus G2: userland apps, MPU sandbox, SVC yield, controlled MemManage fault."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish     = false

[[bin]]
name = "app-sandbox-stm32f769-disco"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true }
rugus-runtime       = { workspace = true }
rugus-kernel        = { workspace = true, features = ["defmt"] }
rugus-hal           = { workspace = true }
rugus-hal-stm32f7   = { workspace = true, features = ["stm32f769"] }
rugus-core          = { workspace = true, features = ["log", "alloc"] }
rugus-arch-cortex-m = { workspace = true, features = ["defmt"] }
