[package]
name        = "blink-stm32f407g-disco"
description = "Rugus blink example for the STMicroelectronics STM32F407G-DISC1 board."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish     = false

[[bin]]
name = "blink-stm32f407g-disco"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true }
rugus-runtime       = { workspace = true }
rugus-hal           = { workspace = true }
rugus-hal-stm32f4   = { workspace = true, features = ["stm32f407"] }
