[package]
name        = "blink-stm32f769-disco"
description = "Rugus blink example for the STMicroelectronics STM32F769I-DISCO board."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish     = false

[[bin]]
name = "blink-stm32f769-disco"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true }
rugus-runtime       = { workspace = true }
rugus-hal           = { workspace = true }
rugus-hal-stm32f7   = { workspace = true, features = ["stm32f769"] }
# rugus-core no se usa en G0; añadir cuando aparezca el scheduler en G1.
