[package]
name        = "console-power-stm32f407g-disco"
description = "Rugus F5.A.3: consola UART con comando `power` (idle/tickless) en STM32F407G-DISC1."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish     = false

[[bin]]
name = "console-power-stm32f407g-disco"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m            = { workspace = true }
defmt               = { workspace = true }
rugus-runtime       = { workspace = true }
rugus-kernel        = { workspace = true, features = ["defmt"] }
rugus-hal           = { workspace = true }
rugus-hal-stm32f4   = { workspace = true, features = ["stm32f407"] }
rugus-core          = { workspace = true }
rugus-arch-cortex-m = { workspace = true, features = ["tickless", "defmt"] }
rugus-crypto        = { workspace = true }
rugus-personality-full = { workspace = true }
rand_core           = { workspace = true }
rush                = { workspace = true, features = ["auth"] }
